--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/material": "^6.4.6",
     "@mui/material-nextjs": "^6.4.3",
+    "@tanstack/react-query": "^5.66.9",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
