--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.1",
+    "@hookform/resolvers": "^4.1.2",
     "@mui/material": "^6.4.6",
     "@mui/material-nextjs": "^6.4.3",
     "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.8.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-infinite-scroller": "^1.2.6",
+    "use-debounce": "^10.0.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -36,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-infinite-scroller": "^1.2.5",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
     "eslint": "^9",
